# SPIN

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  environment.yml  environment_old.yml  mkdocs.yml  prior_analysis.ipynb  pyproject.toml  setup.py
.github/workflows/: docs.yaml  main.yaml  release.yaml
deprecated/: interpolation.py  setup.py
deprecated/examples/: 01_single_parameter.ipynb
deprecated/hippykit/: INSTALL.md  README.md
deprecated/hippykit/hippylib/modeling/: misfit.py  prior.py
deprecated/sp_inference/inference/: model.py  transient.py
deprecated/sp_inference/pde_problems/: forms.py  functions.py  problems.py
deprecated/sp_inference/utilities/: general.py  interpolation.py
deprecated/spin/: environment.yml
deprecated/spin/sp_inference/pde_problems/: problems.py
deprecated/test/: test_fem.py  test_processes.py  test_transient.py  test_utilities.py
docs/: index.md
docs/api/core/: problem.md  weakforms.md
docs/api/fenics/: converter.md
docs/api/hippylib/: hessian.md  laplace.md  misfit.md  optimization.md  prior.md
docs/usage/: theory.md  tutorial.md
examples/: 01_single_parameter.ipynb  02_stationary.ipynb  03_transient.ipynb  04_met_moments.ipynb  1D_drift_diffusion_mfpt.ipynb  1D_drift_diffusion_mfpt_moments.ipynb  1D_drift_mfpt.ipynb  2D_drift_mfpt.ipynb  example.ipynb  mean_exit_time.ipynb
examples/01_example_single_parameter/data/: data_met.txt
examples/01_example_single_parameter/linearized_inference/: forward_map.txt  forward_prior.txt  mean_map.txt  mean_prior.txt  variance_map.txt  variance_prior.txt
examples/02_example_stationary/data/: data_met.txt
examples/02_example_stationary/linearized_inference/: forward_map.txt  forward_prior.txt  mean_map.txt  mean_prior.txt  variance_map.txt  variance_prior.txt
examples/02_example_stationary/mcmc/: forward_mcmc.txt  mean_mcmc.txt  qoi_trace.txt  variance_mcmc.txt
hippykit/: CHANGELOG.md  COPYRIGHT  setup.py
hippykit/hippylib/utils/: fenics_enhancer.py
sp_inference/: __init__.py  postprocessing.py  processes.py
sp_inference/inference/: __init__.py  model.py  sampling.py  transient.py
sp_inference/pde_problems/: __init__.py  forms.py  functions.py  problems.py
sp_inference/postprocessing/: data_types.py  visualization.py
sp_inference/utilities/: __init__.py  general.py  interpolation.py  logging.py
spin/sp_inference/: __init__.py
spin/sp_inference/inference/: __init__.py  sampling.py
spin/sp_inference/pde_problems/: __init__.py
spin/sp_inference/utilities/: __init__.py  general.py
spin/test/: test_utilities.py
src/spin/: __init__.py
src/spin/core/: problem.py  weakforms.py
src/spin/fenics/: converter.py
src/spin/hippylib/: hessian.py  laplace.py  misfit.py  optimization.py  pdeproblem.py  prior.py
test/: test_fem.py  test_processes.py  test_transient.py  test_utilities.py
